samples/_failures_safe/1761428303_0d1af6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee34665b.c: In function ‘main’:
./samples/SAFE/__tmp_ee34665b.c:145:28: error: missing terminating " character
  145 |                     printf("Invalid matrix input.\n
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ee34665b.c:145:21: error: expected expression at end of input
  145 |                     printf("Invalid matrix input.\n
      |                     ^~~~~~
./samples/SAFE/__tmp_ee34665b.c:145:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee34665b.c:145:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee34665b.c:145:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee34665b.c:145:21: error: expected declaration or statement at end of input
